[package]
name = "docdb"
version = "0.1.0"
edition = "2021"
license = "Apache"
description = "A lightweight and simple key-value store written in Rust"
homepage = "https://github.com/Reid00/docDB"
repository = "https://github.com/Reid00/docDB"
readme = "README.md"
keywords = ["database", "key-value-store", "db", "kv", "docdb"]
categories = ["database-implementations", "database", "kv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
bincode = { version = "1.3", optional = true }


[dev-dependencies]
fs2 = "0.4"


[features]
default = ["json"]
# default = ["json", "yaml", "cbor", "bincode"]
json = ["serde_json"]
yaml = ["serde_yaml"]
cbor = []
bincode = ["dep:bincode"]


[[example]]
name = "hello_world"
path = "examples/hello_world/src/main.rs"
